force-app/main/default/objects/Territory__c/Territory__c.object-meta.xml
<CustomObject>
    <description>This object is for the custom territory list provided by SAP.</description>
    <label>Territory</label>
    <nameField>
        <label>Territory ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>