force-app/main/default/objects/Territory__c/fields/Account_Manager_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Number__c</fullName>
    <label>Account Manager Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>