force-app/main/default/objects/Territory__c/fields/District_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>District_Manager_Name__c</fullName>
    <label>District Manager Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>