force-app/main/default/objects/Territory__c/fields/District_Manager_Name_Short__c.field-meta.xml
<CustomField>
    <fullName>District_Manager_Name_Short__c</fullName>
    <label>District Manager Name Short</label>
    <length>80</length>
    <type>Text</type>
</CustomField>