force-app/main/default/objects/Territory__c/fields/District_Manager_Number__c.field-meta.xml
<CustomField>
    <fullName>District_Manager_Number__c</fullName>
    <label>District Manager Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>