force-app/main/default/objects/Territory__c/fields/District_Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>District_Territory_ID__c</fullName>
    <description>This field represents the 4 digit District ID.</description>
    <label>District Territory ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>