force-app/main/default/objects/Territory__c/fields/EID_Length__c.field-meta.xml
<CustomField>
    <fullName>EID_Length__c</fullName>
    <formula>LEN(Enterprise_ID__c) &lt; 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EID Length</label>
    <type>Checkbox</type>
</CustomField>