force-app/main/default/objects/Territory__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>User</label>
    <length>80</length>
    <type>Text</type>
</CustomField>