force-app/main/default/objects/Territory__c/fields/Region_Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>Region_Territory_ID__c</fullName>
    <label>Region Territory ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>