force-app/main/default/objects/Territory__c/fields/Search_Term1__c.field-meta.xml
<CustomField>
    <fullName>Search_Term1__c</fullName>
    <label>Search Term1</label>
    <length>12</length>
    <type>Text</type>
</CustomField>