force-app/main/default/objects/Territory__c/fields/SFDC_USER_ID__c.field-meta.xml
<CustomField>
    <fullName>SFDC_USER_ID__c</fullName>
    <label>SFDC USER ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>