force-app/main/default/objects/Territory__c/fields/Territory_Description__c.field-meta.xml
<CustomField>
    <fullName>Territory_Description__c</fullName>
    <label>Territory Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>