force-app/main/default/objects/Territory__c/fields/Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>Territory_ID__c</fullName>
    <description>This is the SAP Territory ID for the assigned Territory</description>
    <label>Territory ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>