force-app/main/default/objects/Territory__c/fields/Upper_District_short_name__c.field-meta.xml
<CustomField>
    <fullName>Upper_District_short_name__c</fullName>
    <formula>UPPER(District_Manager_Name_Short__c)</formula>
    <label>Upper District short name</label>
    <type>Text</type>
</CustomField>