force-app/main/default/objects/Territory__c/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>